# rs

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
app/: card.tsx  globals.css  index.tsx  main.tsx
app/lib/: github.ts  hash.ts
app/ui/: button.tsx  noise.tsx
src/: main.rs
