[package]
name = "rs"
version = "0.1.0"
edition = "2021"

[dependencies]
pathdiff = "0.2.1"
swc_common = "0.40.0"
swc_ecma_ast = "0.121.0"
swc_ecma_codegen = "0.158.0"
swc_ecma_parser = "0.152.0"
swc_ecma_transforms_base = "0.149.0"
swc_ecma_transforms_react = "0.195.0"
swc_ecma_transforms_typescript = "0.202.0"
swc_ecma_visit = "0.107.0"
walkdir = "2.5.0"
